--- a/f1.html
+++ b/f1.html
@@ -3,57 +3,49 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>F1 - Alpine Intercontinental</title>
+  <title>Alpine F1</title>
   <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="f1-page">
+
   <header>
-    <nav class="navbar">
-      <a href="index.html" class="logo">🏎️ Alpine</a>
-      <ul class="nav-links">
-        <li><a href="index.html">Inicio</a></li>
-        <li><a href="historia.html">Historia</a></li>
-        <li><a href="trofeos.html">Trofeos</a></li>
-        <li><a href="f1.html">F1</a></li>
-        <li><a href="f2.html">F2</a></li>
-        <li><a href="f3.html">F3</a></li>
-        <li><a href="f4.html">F4</a></li>
-        <li><a href="f5.html">F5</a></li>
-        <li><a href="k6.html">K6</a></li>
-      </ul>
-    </nav>
+    <h1>Alpine F1 🏎️</h1>
+    <a href="index.html">⬅ Volver al inicio</a>
   </header>
 
-  <section class="hero">
-    <h1>🚀 Alpine F1</h1>
-    <p>La máxima categoría de Alpine en la Intercontinental Series.</p>
-  </section>
-
-  <main class="container">
-    <h2>Patrocinadores</h2>
-    <p><b>Principal:</b> Royal Air Maroc ✈️</p>
-
-    <h2>Pilotos</h2>
-    <div class="grid">
-      <div class="card">
-        <h3>Omar de León</h3>
-        <p>Campeón WDC F1 (T51). Líder y referente del equipo.</p>
+  <section>
+    <h2>Pilotos Titulares</h2>
+    <div class="drivers">
+      <div class="driver">
+        <img src="pilotos/charles_evans.jpg" alt="Charles Evans">
+        <p>Charles Evans 🇲🇦 (Marruecos)</p>
       </div>
-      <div class="card">
-        <h3>Ignacio Chirioni</h3>
-        <p>Ex campeón en divisiones menores, hoy consolidado en F1.</p>
+      <div class="driver">
+        <img src="pilotos/victor_escalante.jpg" alt="Victor Escalante">
+        <p>Victor Escalante 🇲🇽 (México)</p>
+      </div>
+      <div class="driver">
+        <img src="pilotos/ivan_flamini.jpg" alt="Iván Flamini">
+        <p>Iván Flamini 🇦🇷 (Argentina)</p>
+      </div>
+      <div class="driver">
+        <img src="pilotos/mauro_gentile.jpg" alt="Mauro Gentile">
+        <p>Mauro Gentile 🇦🇷 (Argentina)</p>
       </div>
     </div>
+  </section>
 
-    <h2>Logros Destacados</h2>
+  <section>
+    <h2>Trofeos F1</h2>
     <ul>
-      <li>🏆 WDC F1 - Omar de León (T51)</li>
-      <li>🏆 Constructores F1 - Alpine (T65)</li>
+      <li>🏆 Constructores F1: Alpine (T65)</li>
+      <!-- Aquí puedes seguir añadiendo trofeos -->
     </ul>
-  </main>
+  </section>
 
   <footer>
-    <p>© 2025 Alpine Intercontinental Series - Fan Project</p>
+    <p>© 2025 Alpine Academy - Intercontinental Series</p>
   </footer>
+
 </body>
 </html>
