--- a/index.html
+++ b/index.html
@@ -62,6 +62,20 @@
       <li>▶️ YouTube: <a href="#">Alpine Racing TV</a></li>
     </ul>
   </section>
+<section id="trofeos">
+  <h2>🏆 Trofeos por categoría</h2>
+  <ul style="list-style:none; padding:0; margin:1rem auto; max-width:600px;">
+    <li style="margin:.4rem 0;"><a href="trofeos-f1.html">F1 – Alpine</a></li>
+    <li style="margin:.4rem 0;"><a href="trofeos-f2.html">F2 – Citroën Alpine</a></li>
+    <li style="margin:.4rem 0;"><a href="trofeos-f3.html">F3 – Alpine Mitsubishi</a></li>
+    <li style="margin:.4rem 0;"><a href="trofeos-f4.html">F4 – Alpine Academy</a></li>
+    <li style="margin:.4rem 0;"><a href="trofeos-f5.html">F5 – Alpine Juniors</a></li>
+    <li style="margin:.4rem 0;"><a href="trofeos-k6.html">K6 – Alpine Galaxy</a></li>
+  </ul>
+  <p style="margin-top:1rem;">
+    👉 ¿Todos juntos? Ve la <a href="trofeos.html">lista completa de trofeos</a>.
+  </p>
+</section>
 
   <footer>
     <p>© 2025 Alpine Racing Team - Intercontinental Series</p>
