--- a/historia.html
+++ b/historia.html
@@ -3,54 +3,176 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Historia Completa - Alpine Intercontinental</title>
-  <link rel="stylesheet" href="style.css">
+  <title>Historia Completa - Alpine Academy Intercontinental Series</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      line-height: 1.6;
+      background: #f9f9f9;
+      color: #333;
+    }
+    header {
+      background: #001f3f;
+      color: white;
+      padding: 1rem;
+      text-align: center;
+    }
+    nav {
+      background: #00509e;
+      padding: 0.5rem;
+      text-align: center;
+    }
+    nav a {
+      color: white;
+      margin: 0 10px;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    nav a:hover {
+      text-decoration: underline;
+    }
+    main {
+      max-width: 900px;
+      margin: auto;
+      padding: 2rem;
+      background: white;
+    }
+    h1, h2, h3 {
+      color: #003366;
+    }
+    blockquote {
+      border-left: 4px solid #00509e;
+      padding-left: 1rem;
+      font-style: italic;
+      background: #f0f8ff;
+    }
+    ul {
+      margin-left: 20px;
+    }
+    footer {
+      text-align: center;
+      padding: 1rem;
+      background: #001f3f;
+      color: white;
+      margin-top: 2rem;
+    }
+  </style>
 </head>
 <body>
   <header>
-    <nav class="navbar">
-      <a href="index.html" class="logo">🏎️ Alpine</a>
-      <ul class="nav-links">
-        <li><a href="index.html">Inicio</a></li>
-        <li><a href="historia.html">Historia</a></li>
-        <li><a href="trofeos.html">Trofeos</a></li>
-      </ul>
-    </nav>
+    <h1>Alpine Academy Intercontinental Series</h1>
+    <p>Historia Completa</p>
   </header>
 
-  <section class="hero">
-    <h1>📖 Historia del Equipo Alpine</h1>
-    <p>Conoce en detalle el recorrido del equipo en la <b>Intercontinental Series</b>.</p>
-  </section>
+  <nav>
+    <a href="index.html">Inicio</a>
+    <a href="f1.html">F1</a>
+    <a href="f2.html">F2</a>
+    <a href="f3.html">F3</a>
+    <a href="f4.html">F4</a>
+    <a href="historia.html">Historia</a>
+  </nav>
 
-  <main class="container">
-    <h2>Inicios</h2>
+  <main>
+    <h2>Alpine Academy: Forjando Campeones, No Solo Buscándolos</h2>
+
+    <h3>Los Primeros Pasos (T47–T50)</h3>
     <p>
-      El equipo Alpine nació en la liga <b>Intercontinental Series</b> como un proyecto ambicioso inspirado en el automovilismo real,
-      con el objetivo de participar en múltiples categorías desde F1 hasta divisiones formativas como F5 y K6.
+      En la Temporada 47 de la Intercontinental Series, nació una visión diferente en el mundo del automovilismo virtual. 
+      Mientras otros equipos cazaban talento establecido, Alpine Academy emergió con una filosofía revolucionaria: 
+      <em>"No buscamos a los mejores, los hacemos mejores"</em>. 
+    </p>
+    <p>
+      Como CEO fundador de Alpine, también tomé las riendas de Mitsubishi en F3, estableciendo desde el inicio una red de desarrollo que abarcaría múltiples categorías. 
+      Alpine se concibió como un espacio de crecimiento y aprendizaje, no como un destino final. 
     </p>
 
-    <h2>Expansión</h2>
+    <h3>El Nacimiento Oficial (T50)</h3>
     <p>
-      Con el paso de las temporadas, Alpine no solo se consolidó como un equipo competitivo en F1,
-      sino que creó una academia que abarca F2, F3, F4, F5 y K6, funcionando como cantera de jóvenes pilotos.
+      La Temporada 50 marcó un hito histórico: Alpine nació oficialmente. Lo que comenzó como un proyecto paralelo en Mitsubishi 
+      se convirtió en una academia con nombre y apellido, con una identidad propia y una misión clara: construir un legado en vez de solo competir.
     </p>
 
-    <h2>Palmarés</h2>
+    <h3>Años de Construcción y Mentoría (T51–T60)</h3>
     <p>
-      Los logros de Alpine incluyen títulos de constructores, campeonatos mundiales de pilotos (WDC) y copas en distintas categorías.
-      Entre los más destacados se encuentra el campeonato de <b>Constructores F1 en T65</b> y la consolidación en F2 y F3 como equipos de referencia.
+      Durante esta década crucial, Alpine Academy se estableció como algo único en el paddock. 
+      No solo competíamos: enseñábamos. Pilotos y CEOs jóvenes encontraban en Alpine un lugar para aprender a gestionar, crecer y soñar con más.
+    </p>
+    <p>
+      Bajo mi liderazgo como Victor Escalante, no solo formamos escuderías satélite como Citroën Alpine en F2 y Alpine Mitsubishi en F3, 
+      sino que también impulsamos carreras de CEOs que luego destacaron en categorías mayores.
     </p>
 
+    <h3>La Consolidación del Legado (T58–T63)</h3>
+    <ul>
+      <li><strong>T58:</strong> Alpine Academy logra el campeonato de constructores en F4, confirmando que nuestra filosofía daba frutos.</li>
+      <li><strong>T61:</strong> Dominamos la Silver League F4 mientras Diego Redondo y Arturo Yerena brillan en pista.</li>
+      <li><strong>T62:</strong> Expandimos con Citroën Alpine en F2 y Alpine Juniors en F5, consolidando una estructura piramidal de desarrollo.</li>
+    </ul>
+
+    <h3>Más Que Un Equipo: Un Movimiento</h3>
+    <p>
+      Alpine Academy no fue nunca un simple equipo, sino un movimiento que redefinió el automovilismo en la liga Intercontinental Series.
+    </p>
+    <h4>Nuestros Pilares</h4>
+    <ul>
+      <li><em>Educación Continua:</em> Cada piloto que pasa por nuestras filas aprende no solo a ganar, sino a enseñar.</li>
+      <li><em>Mentoría Activa:</em> Brindamos orientación constante a nuevos CEOs y equipos emergentes.</li>
+      <li><em>Desarrollo Sostenible:</em> Preferimos formar talento a largo plazo que perseguir éxitos fugaces.</li>
+      <li><em>Promoción Interna:</em> Como el ascenso de Leandro Fernández, que pasó de campeón F5 a CEO.</li>
+      <li><em>Comunidad:</em> Fomentamos una red de apoyo que va más allá de la competencia.</li>
+    </ul>
+
+    <h3>El Ascenso a la Gloria (T65–T69)</h3>
+    <p>
+      <strong>T65:</strong> Alpine logra el campeonato de constructores en Fórmula 1, un sueño que parecía imposible en nuestros inicios.  
+      <strong>T66:</strong> Cristian Fernández arrasa en F3 mientras Alpine se lleva el título en F4.  
+      <strong>T67:</strong> Consagramos nuestro dominio con el campeonato en F2, demostrando que toda la pirámide funcionaba en armonía.  
+      <strong>T69:</strong> Leandro Fernández logra su primera victoria en F1, y la llegada de Charles Evans, campeón mundial, eleva el nivel de la academia a un plano global.
+    </p>
+
+    <h3>El Presente y El Futuro (T71 en adelante)</h3>
+    <p>
+      Hoy, en la T71, Alpine Academy ha alcanzado una posición sin precedentes en la Intercontinental Series. 
+      Somos el único equipo con presencia activa en todas las categorías (F1, F2, F3, F4, F5 y K6), 
+      una red completa de formación y excelencia.
+    </p>
+    <p>
+      Nuestro legado está asegurado: Alpine no depende de nombres individuales, sino de una filosofía compartida que se transmite de generación en generación. 
+      Con Leandro Fernández y Angelo Lemus como herederos del proyecto, el futuro de Alpine Academy está garantizado.
+    </p>
+
+    <blockquote>
+      "No buscamos a los mejores, los hacemos mejores"  
+      – Victor Escalante, Team Principal de Alpine Academy (desde T47 hasta hoy)
+    </blockquote>
+
+    <!-- 🔵 ACTUALIDAD -->
     <h2>Actualidad</h2>
     <p>
-      Hoy Alpine sigue siendo un proyecto en constante evolución, con patrocinadores destacados como <b>Royal Air Maroc</b> en F1,
-      <b>Citroën</b> en F2, <b>Mitsubishi</b> en F3 y <b>BWT</b> en las divisiones formativas, manteniendo su identidad de equipo formador de talentos.
+      En la temporada actual, Alpine Academy se mantiene como una de las estructuras más completas y sólidas dentro de la 
+      Intercontinental Series. Con presencia activa en todas las divisiones, el equipo se ha convertido en un referente 
+      tanto deportivo como formativo.
+    </p>
+    <ul>
+      <li><strong>F1:</strong> Consolidado en la máxima categoría, con pilotos experimentados capaces de luchar en la élite.</li>
+      <li><strong>F2:</strong> Citroën Alpine mantiene la competitividad, preparando pilotos listos para dar el salto a F1.</li>
+      <li><strong>F3:</strong> Un semillero de talento, con jóvenes promesas que buscan abrirse paso.</li>
+      <li><strong>F4 y F5:</strong> La base de la academia, donde nuevos CEOs y pilotos reciben su primera oportunidad.</li>
+      <li><strong>K6:</strong> El punto de entrada más joven y fresco, orientado a la formación inicial.</li>
+    </ul>
+    <p>
+      Hoy Alpine Academy es más que un equipo: es una <em>escuela integral</em> que asegura el relevo generacional 
+      en el automovilismo virtual. Gracias a la visión de su fundador y la labor de sus herederos, 
+      la academia sigue forjando campeones dentro y fuera de la pista.
     </p>
   </main>
 
   <footer>
-    <p>© 2025 Alpine Intercontinental Series - Fan Project</p>
+    <p>Basado en la liga Intercontinental Series del videojuego iGP Manager</p>
+    <p>Herederos: Leandro Fernández y Angelo Lemus</p>
   </footer>
 </body>
 </html>
