--- a/index.html
+++ b/index.html
@@ -8,71 +8,61 @@
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-      background: linear-gradient(135deg, #001f3f, #0074D9);
+      background: linear-gradient(to bottom, #001f3f, #0074D9);
       color: white;
+      text-align: center;
     }
 
     header {
-      background: rgba(0, 0, 0, 0.7);
-      padding: 10px 20px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      position: sticky;
-      top: 0;
-      z-index: 1000;
+      background: #001f3f;
+      padding: 15px;
     }
 
-    header h1 {
-      font-size: 1.2em;
-      margin: 0;
-    }
-
-    /* menú pc */
+    /* Menú horizontal PC */
     nav ul {
       list-style: none;
-      display: flex;
-      gap: 15px;
       margin: 0;
       padding: 0;
+      display: flex;
+      justify-content: center;
+      gap: 20px;
     }
 
     nav ul li a {
-      text-decoration: none;
       color: white;
+      text-decoration: none;
       font-weight: bold;
     }
 
     nav ul li a:hover {
-      color: #FFD700;
+      text-decoration: underline;
     }
 
-    /* menú móvil */
+    /* Menú hamburguesa en móvil */
     .menu-toggle {
       display: none;
       flex-direction: column;
       cursor: pointer;
     }
 
-    .menu-toggle div {
-      width: 25px;
+    .bar {
       height: 3px;
-      background: white;
-      margin: 4px 0;
+      width: 25px;
+      background-color: white;
+      margin: 3px 0;
     }
 
     @media (max-width: 768px) {
       nav ul {
         display: none;
         flex-direction: column;
-        background: rgba(0, 0, 0, 0.9);
+        background: #001f3f;
         position: absolute;
         top: 60px;
-        right: 20px;
-        padding: 10px;
-        border-radius: 8px;
+        left: 0;
+        width: 100%;
       }
-      nav ul.active {
+      nav ul.show {
         display: flex;
       }
       .menu-toggle {
@@ -80,31 +70,51 @@
       }
     }
 
-    main {
+    /* Imagen saltando */
+    .bounce {
+      width: 200px;
+      margin: 30px auto;
+      animation: bounce 2s infinite;
+    }
+
+    @keyframes bounce {
+      0%, 20%, 50%, 80%, 100% {transform: translateY(0);}
+      40% {transform: translateY(-30px);}
+      60% {transform: translateY(-15px);}
+    }
+
+    /* Sección equipos */
+    .equipos {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      gap: 20px;
       padding: 20px;
-      text-align: center;
     }
 
-    main h2 {
-      color: #FFD700;
-    }
-
-    footer {
-      margin-top: 40px;
+    .equipo-card {
+      background: rgba(255, 255, 255, 0.1);
       padding: 15px;
-      background: rgba(0, 0, 0, 0.8);
-      text-align: center;
-      font-size: 0.9em;
+      border-radius: 12px;
+      box-shadow: 0 4px 6px rgba(0,0,0,0.3);
+      transition: transform 0.2s;
+    }
+
+    .equipo-card:hover {
+      transform: scale(1.05);
+    }
+
+    .equipo-card img {
+      width: 80px;
+      margin-bottom: 10px;
     }
   </style>
 </head>
 <body>
   <header>
-    <h1>Alpine Academy Intercontinental Series</h1>
     <div class="menu-toggle" id="menu-toggle">
-      <div></div>
-      <div></div>
-      <div></div>
+      <div class="bar"></div>
+      <div class="bar"></div>
+      <div class="bar"></div>
     </div>
     <nav>
       <ul id="menu">
@@ -120,27 +130,57 @@
   </header>
 
   <main>
-    <h2>Bienvenidos a Alpine Academy</h2>
-    <p>
-      Proyecto basado en la liga Intercontinental Series del videojuego iGP Manager.  
-      Alpine Academy Intercontinental Series no solo busca campeones, los forma.  
-    </p>
-    <p>
-      Explora nuestras categorías, historia y logros a través del menú superior.
-    </p>
+    <h1>Alpine Academy Intercontinental Series</h1>
+    <p>Basado en la liga Intercontinental Series del videojuego iGP Manager</p>
+
+    <!-- Imagen saltando -->
+    <img src="logo.png" alt="Logo Alpine Academy" class="bounce">
+
+    <h2>Nuestros Equipos</h2>
+    <div class="equipos">
+      <div class="equipo-card">
+        <a href="f1.html">
+          <img src="f1.png" alt="F1">
+          <p>Fórmula 1</p>
+        </a>
+      </div>
+      <div class="equipo-card">
+        <a href="f2.html">
+          <img src="f2.png" alt="F2">
+          <p>Fórmula 2</p>
+        </a>
+      </div>
+      <div class="equipo-card">
+        <a href="f3.html">
+          <img src="f3.png" alt="F3">
+          <p>Fórmula 3</p>
+        </a>
+      </div>
+      <div class="equipo-card">
+        <a href="f4.html">
+          <img src="f4.png" alt="F4">
+          <p>Fórmula 4</p>
+        </a>
+      </div>
+      <div class="equipo-card">
+        <a href="f5.html">
+          <img src="f5.png" alt="F5">
+          <p>Fórmula 5</p>
+        </a>
+      </div>
+    </div>
   </main>
 
   <footer>
-    Basado en la liga Intercontinental Series del videojuego iGP Manager.  
-    <br> CEOs: Victor Escalante, Leandro Fernández y Angelo Lemus
+    <p>&copy; 2025 Alpine Academy Intercontinental Series.  
+    Herederos: Leandro Fernández & Angelo Lemus</p>
   </footer>
 
   <script>
     const toggle = document.getElementById("menu-toggle");
     const menu = document.getElementById("menu");
-
     toggle.addEventListener("click", () => {
-      menu.classList.toggle("active");
+      menu.classList.toggle("show");
     });
   </script>
 </body>
